--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-uuid": "^2.0.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
